More fixes for HTML IFRAME display
Heights are not correctly calculated for some HTML messages - this
appears to be a browser issue.  Adjusting the iframe size causes a
re-render of the internal contents which causes the internal contents
height to increase.  This prevents display of content at the very bottom
of the data - thus, we need to display scrollbars for these messages.
Ugly, but necessary.

Also, fix a few annoying IE issues with display heights/widths.

--- a/imp/themes/screen-dimp.css
+++ b/imp/themes/screen-dimp.css
@@ -591,6 +591,7 @@ div.dimpActionsCompose, div.dimpActionsMsg {
 .msgBody {
     background: #fff url("graphics/backhead_shadow.png") top repeat-x;
     padding: 7px 5px 5px;
+    overflow-x: auto;
 }
 .msgBody table td {
     padding: 0;
